add new file app.py and update requirements to include streamlit and streamlit_antd_components

--- a/notebooks/notebook_visoes.ipynb
+++ b/notebooks/notebook_visoes.ipynb
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1454,7 @@
        "['Amritsar', 'Vadodara']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1464,7 +1464,7 @@
     "    ['city']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
     "lista = []\n",
     "for i in range(len(cidade_maior_qtdade_restaurantes_que_entregam)):\n",
-    "    if re7.iloc[0, 1] == cidade_maior_qtdade_restaurantes_que_entregam.iloc[i, 1]:\n",
+    "    if cidade_maior_qtdade_restaurantes_que_entregam.iloc[0, 1] == cidade_maior_qtdade_restaurantes_que_entregam.iloc[i, 1]:\n",
     "        lista.append(cidade_maior_qtdade_restaurantes_que_entregam.iloc[i, 0])\n",
     "lista"
    ]
