--- a/notebooks/notebook_visoes.ipynb
+++ b/notebooks/notebook_visoes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "1       3F7E00   Excellent    469  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "(6929, 21)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "15"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1271,7 @@
        "'Abu Dhabi'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1300,16 +1300,17 @@
        "'Bangalore'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cidade_com_mais_restaurantes_nota_media_acima_de_4 = df.loc[:, ['city', 'restaurant_id', 'aggregate_rating']].groupby(['city', 'restaurant_id']).mean().sort_values(by='aggregate_rating', ascending=False).reset_index()\n",
-    "cidade_mais_restaurantes_nota_media_acima_de_4 = cidade_mais_restaurantes_nota_media_acima_de_4.loc[cidade_mais_restaurantes_nota_media_acima_de_4['aggregate_rating'] > 4, ['city', 'restaurant_id']].groupby(\n",
-    "    ['city']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
-    "cidade_com_mais_restaurantes_nota_media_acima_de_4.iloc[0, 0]"
+    "(df.loc[df['aggregate_rating'] > 4, ['restaurant_id', 'city']]\n",
+    " .groupby('city')\n",
+    " .count()\n",
+    " .sort_values('restaurant_id', ascending=False)\n",
+    " .reset_index()).iloc[0, 0]"
    ]
   },
   {
@@ -1322,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1332,7 @@
        "'Gangtok'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,26 +1384,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Bhopal'"
+       "'Birmingham'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cidade_maior_qtdade_de_culinaria_distintas = df.loc[:, ['city', 'cuisines', 'restaurant_id']].groupby(\n",
-    "    ['city', 'cuisines']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
-    "re5 = cidade_maior_qtdade_de_culinaria_distintas.loc[:, ['city', 'cuisines']].groupby(['city']).count(\n",
-    ").sort_values(by='cuisines', ascending=False).reset_index()\n",
-    "cidade_maior_qtdade_de_culinaria_distintas.iloc[0, 0]"
+    "cidade_maior_qtdade_de_culinaria_distintas = df.loc[:, ['city', 'cuisines']].groupby(\n",
+    "    'city').nunique().sort_values(by='cuisines', ascending=False).reset_index().iloc[0, 0]\n",
+    "cidade_maior_qtdade_de_culinaria_distintas"
    ]
   },
   {
@@ -1415,22 +1414,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Bhopal'"
+       "'Bangalore'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cidade_com_maior_qtdade_de_restaurantes_que_entregam = df.loc[df['has_online_delivery'] == 1, ['city', 'restaurant_id']].groupby(\n",
+    "cidade_com_maior_qtdade_de_restaurantes_que_entregam = df.loc[df['has_table_booking'] == 1, ['city', 'restaurant_id']].groupby(\n",
     "    ['city']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
     "cidade_com_maior_qtdade_de_restaurantes_que_entregam.iloc[0, 0]"
    ]
@@ -1445,16 +1444,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Amritsar', 'Vadodara']"
+       "'Amritsar'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,11 +1461,7 @@
    "source": [
     "cidade_maior_qtdade_restaurantes_que_entregam = df.loc[df['is_delivering_now'] == 1, ['city', 'restaurant_id']].groupby(\n",
     "    ['city']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
-    "lista = []\n",
-    "for i in range(len(cidade_maior_qtdade_restaurantes_que_entregam)):\n",
-    "    if cidade_maior_qtdade_restaurantes_que_entregam.iloc[0, 1] == cidade_maior_qtdade_restaurantes_que_entregam.iloc[i, 1]:\n",
-    "        lista.append(cidade_maior_qtdade_restaurantes_que_entregam.iloc[i, 0])\n",
-    "lista"
+    "cidade_maior_qtdade_restaurantes_que_entregam.iloc[0, 0]"
    ]
   },
   {
